[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmachine"
version = "0.0.2"
authors = [
  { name="William Jackson", email="william@kegnh.com" },
]
description = "A package for all things Cell Machine."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/itskegnh/cellmachine"
"Bug Tracker" = "https://github.com/itskegnh/cellmachine/issues"
